Updated divaling2 plugin

--- a/site/www.eiroca.net/wiki/lib/plugins/divalign2/print.css
+++ b/site/www.eiroca.net/wiki/lib/plugins/divalign2/print.css
@@ -1,6 +1,6 @@
 /**
- * @file       divalign2/style.css
- * @brief      Base stylesheet for divalign2 plugin.
+ * @file       divalign2/print.css
+ * @brief      Print stylesheet for divalign2 plugin.
  * @version    2.3
  * @author     Luis Machuca Bezzaza <luis [dot] machuca [at] gulix [dot] cl>
  */
