--- a/site/www.eiroca.net/wiki/lib/tpl/eiroca_new/css/mediaquery.css
+++ b/site/www.eiroca.net/wiki/lib/tpl/eiroca_new/css/mediaquery.css
@@ -47,6 +47,9 @@
   padding: 0.5em;
   width: 95%;
  }
+ .content .sidebar {
+  margin-bottom: 0.5em;
+ }
 }
 
 @media only screen and (max-width: __phone_width__) {
@@ -65,6 +68,9 @@
  .navigation ul li a {
   font-size: 12px;
  }
+ #menu {
+  border: 0px;
+ }
  .footer .user {
   display: none;
  }
@@ -82,6 +88,28 @@
  }
  .docPage,.content {
   padding: 0em;
+ }
+ .menuLink {
+  display: block;
+ }
+ .menuBar {
+  display: none;
+ }
+ .menuBar.open {
+  font-size: 1.2em;
+  display: block;
+  position: fixed;
+  top: 24px;
+  left: 0px;
+  width: 200;
+  background: __background_neu__;
+  z-index: 8888;
+  -webkit-border-radius: .5em;
+  -moz-border-radius: .5em;
+  border-radius: .5em;
+ }
+ .menuItem {
+  display: block;
  }
 }
 
